# Dual-Reverb

./: .gitignore  README.md
code/AudioPlugin/: CMakeLists.txt  Convolution.h  DelayLine.cpp  DelayLine.h  FDN.cpp  FDN.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TestReverb.cpp  TestReverb.h
code/AudioPlugin/components/: DelayLine.cpp  DelayLine.h  Diffuser.cpp  Diffuser.h  FeedbackLoop.cpp  FeedbackLoop.h  Matrix.h
code/IS-Reverb/: CMakeLists.txt
code/IS-Reverb/resource/: myplugineditor.uidesc
code/IS-Reverb/source/: myplugincids.h  myplugincontroller.cpp  mypluginprocessor.cpp  mypluginprocessor.h  plugids.h  reverbstruct.cpp  reverbstruct.h  version.h
code/Reverb/: CMakeLists.txt
code/Reverb/resource/: myplugineditor.uidesc
code/Reverb/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
docs/: example.1  example.mp  references.bib  test.csv  test2.csv  username.tex
docs/appendices/: afterword.tex  appendixa.tex
docs/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  introduction.tex  preface.tex
docs/source/: delaylinec.txt  editor.txt  editorc.txt  processor.txt  processorc.txt  pseudo1.txt  pseudo2.txt  pseudo3.txt  pseudo4.txt  pseudo42.txt  pseudo5.txt  pseudo52.txt  pseudo6.txt  template.txt  testreverbc.txt  testreverbh.txt
docs/styles/: packages.tex
